--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Carbbels - Manual Anagram Solver</title>
+    <meta name="description" content="Anagram sandbox with draggable letter tiles for spatial reasoning. Manually solve anagrams by rearranging tiles.">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Carbbels | NQR Labs">
+    <meta property="og:description" content="Anagram sandbox with draggable letter tiles for spatial reasoning. Manually solve anagrams by rearranging tiles.">
+    <meta property="og:image" content="https://nqrlabs.com/Carbbels/assets/images/logo.png">
+    <meta property="og:url" content="https://nqrlabs.com/Carbbels/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Carbbels | NQR Labs">
+    <meta name="twitter:description" content="Anagram sandbox with draggable letter tiles for spatial reasoning. Manually solve anagrams by rearranging tiles.">
+    <meta name="twitter:image" content="https://nqrlabs.com/Carbbels/assets/images/logo.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://nqrlabs.com/Carbbels/">
+
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon-180x180.png">
